# Dji-owner

./: .gitignore  LICENSE  README.he.md  README.md  pyproject.toml  requirements.txt
chats/: drone2.txt  drones.txt  פריצת רחפן.txt
consolidated/: .dockerignore  AUDIT.md  Dockerfile  README.md  docker-compose.yml  launch.ps1  launch.sh
docs/: v1.0.0_.skycore-state.md  v1.0.0_CODE_REVIEW.md  v1.0.0_SKYCORE_AUDIT_AND_STATUS.md  v1.0.0_extracted_skycore_ADVANCED_CAPABILITIES_HEBREW.md  v1.0.0_extracted_skycore_FINAL_MILITARY_VERSION.md  v1.0.0_extracted_skycore_FULL_END_TO_END_CODE_REVIEW.md  v1.0.0_extracted_skycore_INSTALL.md  v1.0.0_extracted_skycore_SINGULARITY_FINAL.md  v1.0.0_extracted_skycore_SINGULARITY_PACKAGE.md  v1.0.0_extracted_skycore_STATUS.md  v1.0.0_protocol_PROTOCOL_DOCS.md  v1.0.0_repo_analysis_REPOS_ANALYSIS_REPORT.md  v7.2_package_BuildComplete.md  v7.2_package_COMPLETE_WORD_BY_WORD_CHECK.md  (+42 more)
src/skycore_v7.2/: ADDITIONAL_MILITARY_USE_CASES.md  CODE_REVIEW_OFFICIAL.md  Dockerfile  FINAL_LEGAL_MILITARY.md  FINAL_ULTIMATE_SUMMARY.md  INVENTORY_HEBREW.md  ULTIMATE_FINAL_PACKAGE.md  cli.py  pyproject.toml
src/skycore_v7.2/analytics/: analyzer.py
src/skycore_v7.2/battery/: tracker.py
src/skycore_v7.2/comms/: encrypted.py
src/skycore_v7.2/core/: config.py
src/skycore_v7.2/cuas/: ai_classifier.py  autonomous_threat_response.py  counter_swarm.py  sensor_fusion.py
src/skycore_v7.2/dashboard/: operator_interface.html  operator_interface_v2.html
src/skycore_v7.2/fleet/: manager.py
src/skycore_v7.2/geofence/: manager.py
src/skycore_v7.2/hardware/: hardware_integration.py  real_dji_integration.py  real_px4_integration.py
src/skycore_v7.2/hmi/: ar_vr_command.py  human_machine_teaming.py
src/skycore_v7.2/integration/: c4isr.py  multi_domain_operations.py
src/skycore_v7.2/missions/: coordinated.py  orbit.py  panorama.py
src/skycore_v7.2/notifications/: webhooks.py
src/skycore_v7.2/photogrammetry/: odm.py
src/skycore_v7.2/planning/: obstacle_avoidance.py
src/skycore_v7.2/presets/: lawnmower_survey.csv  orbit-template.csv  sar_expanding_square.csv
src/skycore_v7.2/profiles/: mavic.py
src/skycore_v7.2/replay/: log_replay.py
src/skycore_v7.2/security/: full_security_stack.py  immutable_audit.py  key_management.py  operator_control.py  quantum_crypto.py
src/skycore_v7.2/skycore.egg-info/: PKG-INFO
src/skycore_v7.2/swarm/: coordinator.py
src/skycore_v7.2/vision/: advanced_follow.py
(+515 files in other folders)
